--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body, * {
 a {
     text-decoration: none;
 }
+img {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 50px;
+}
 .overlay {
     width: 100%;
     height: 100vh;
